[package]
name = "revm-interpreter-js"
edition = "2021"
authors = ["0xmDreamy <0xmDreamy@proton.me>"]
description = "Basic REVM Interpreter WASM binding for JavaScript"
license = "MIT"
repository = "https://github.com/evmts/tevm-monorepo"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.70"
revm-interpreter = { version = "9.0.0", default-features = false }
wasm-bindgen = "0.2.93"
