[package]
name = "revm-interpreter-js"
edition = "2021"
authors = ["0xmDreamy <0xmDreamy@proton.me>"]
description = "Basic REVM Interpreter WASM binding for JavaScript"
license = "MIT"
repository = "https://github.com/evmts/tevm-monorepo"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.70"
revm-interpreter = { version = "11.0", default-features = false }
tsify-next = { version = "0.5", default-features = false, features = ["js"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_bytes = { version = "0.11", default-features = false, features = [
    "alloc",
] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
